--- a/css/guest.css
+++ b/css/guest.css
@@ -196,7 +196,7 @@ svg {
 
     aspect-ratio: 2 / 3;
 
-    background: url('./assets/images/frame_ayat.webp') no-repeat center;
+    background: url('/assets/images/frame_ayat.webp') no-repeat center;
     background-size: 100% 100%;
 }
 .frame-content {
