--- a/public/css/guest.css
+++ b/public/css/guest.css
@@ -195,9 +195,6 @@ svg {
     margin: 0 auto;
 
     aspect-ratio: 2 / 3;
-
-    background: url('/assets/images/frame_ayat.webp') no-repeat center;
-    background-size: 100% 100%;
 }
 .frame-content {
     position: absolute;
@@ -207,7 +204,10 @@ svg {
     width: 70%;
     text-align: center;
 }
-
+.frame-img-ayat {
+    width: 100%;
+    display: block;
+}
 
 
 .ayat-text {
