--- a/public/css/common.css
+++ b/public/css/common.css
@@ -8,6 +8,7 @@ body {
     padding: 0 !important;
     width: 100% !important;
     overflow-x: hidden !important;
+    background-color: #ffffff;
 }
 
 i {
