--- a/css/common.css
+++ b/css/common.css
@@ -1,6 +1,8 @@
 html {
     scroll-behavior: smooth !important;
     width: 100vw !important;
+    -webkit-text-size-adjust: 100%;
+    text-size-adjust: 100%;
 }
 
 body {
